# QP-1

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: BEGINNER_GUIDE.md
src/: __init__.py  backtester.py  data_engine.py  model.py
